--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -16,10 +16,14 @@ top: -30px;
     height: 100%;
 }
 #parrafo{
-    max-width: 200px;
+    max-width: 500px;
     font-family: sans-serif;
-    align-items: center;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    display: inline-block;
 }
 
 #inicio{
