--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -71,6 +71,13 @@ top: -30px;
     margin-left: 10px 20px;
     width: 200px;
 }
+.titulosprincipales{
+    display: flex;
+    align-items: stretch;
+    background-color: black;
+    border: 4px solid black;
+    padding: 20px;
+}
 
 
 /*Desplegable Camisas*/
