--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -79,12 +79,18 @@ top: -30px;
     background-color: rgba(0, 0, 0, 0.404);
     border: 4px solid rgb(255, 255, 255);
     padding: 20px;
-    margin: 20px;
+    margin: 542px 755px;
     text-decoration: none;
 }
-section h1, h2{
+main h1, h2{
     color: bisque;
 }
+.cajas {
+    align-items: center;
+    display: flex;
+  
+}
+main{background-color: black;}
 
 
 /*Desplegable Camisas*/
