--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -79,7 +79,7 @@ top: -30px;
     background-color: rgba(0, 0, 0, 0.404);
     border: 4px solid rgb(255, 255, 255);
     padding: 20px;
-    margin: 542px 755px;
+    margin: 20px;
     text-decoration: none;
 }
 main h1, h2{
