--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -81,6 +81,7 @@ top: -30px;
     padding: 20px;
     margin: 20px;
     text-decoration: none;
+    height: 100px;
 }
 main h1, h2{
     color: bisque;
