--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -87,6 +87,11 @@ top: -30px;
 main h1, h2{
     color: bisque;
     text-align: center;
+    top: 50px;
+}
+
+img{
+    bottom: 40px;
 }
 .cajas {
     align-items: center;
