--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -83,6 +83,9 @@ top: -30px;
     text-decoration: none;
     height: 430px;
     border-radius: 10px 20px 15px 5px;
+    position: absolute; 
+    top: 10px;
+    left: 10px;
 }
 main h1, h2{
     color: bisque;
@@ -91,11 +94,13 @@ main h1, h2{
 }
 
 img{
-    bottom: 40px;
+    object-fit: cover; 
+    
 }
 .cajas {
     align-items: center;
     display: flex;
+    position: relative;
 }
 main{background-color: black;}
 
