--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -104,7 +104,7 @@ img{
     align-items: center;
     display: flex;
     height: 400px;
-    top: 30px;
+    margin-top: 100px;
 }
 main{background-color: black;}
 
