--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -81,10 +81,12 @@ top: -30px;
     padding: 20px;
     margin: 20px;
     text-decoration: none;
-    height: 1000px;
+    height: 430px;
     border-radius: 10px 20px 15px 5px;
     top: 10px;
     left: 10px;
+    border-top: 20px;
+    border-bottom: 100px;
 }
 main h1, h2{
     color: bisque;
