--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -79,9 +79,9 @@
 .titulosprincipales {
     display: flex;
     align-items: stretch;
-    background-color: rgba(0, 0, 0, 0.404);
-    border: 4px solid rgb(255, 255, 255);
-    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    border: 4px solid rgb(0, 0, 0);
+    padding: 400px;
     margin: 20px;
     text-decoration: none;
     height: 430px;
@@ -110,7 +110,7 @@ img {
     display: flex;
     height: 400px;
   margin-top: 100px;
-  padding: 400px;
+ 
 }
 
 main {
