--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -82,11 +82,12 @@
     background-color: rgb(0, 0, 0);
     border: 4px solid rgb(255, 255, 255);
     padding: 30px;
-    margin: 40px;
+    margin: 20px;
     text-decoration: none;
     height: 460px;
     border-radius: 20px 20px 20px 20px;
     max-width: 300px;
+    top: -20px;
 }
 
 main h1,
