--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -87,7 +87,7 @@
     height: 460px;
     border-radius: 20px 20px 20px 20px;
     max-width: 300px;
-    top: 400px;
+    bottom: 50px;
 }
 
 main h1,
