--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -87,6 +87,8 @@
     height: 460px;
     border-radius: 20px 20px 20px 20px;
     max-width: 300px;
+    text-align: center;
+    top: 60px;
 }
 
 main h1,
