--- a/prueba/estilos.css
+++ b/prueba/estilos.css
@@ -30,4 +30,20 @@
     background-color: #eee; /* Cambiar el fondo al pasar el mouse sobre el cuadro */
     cursor: pointer; /* Cambiar el cursor al pasar el mouse sobre el cuadro */
   }
+
   
+
+  .contenedor {
+    border: 1px solid #ccc;
+    padding: 20px; /* Puedes ajustar el valor según tus necesidades */
+    text-align: center;
+}
+
+.contenedor img {
+    max-width: 100%; /* La imagen no superará el ancho del contenedor */
+    max-height: 100%; /* La imagen no superará la altura del contenedor */
+    width: auto; /* Mantiene la proporción de aspecto original de la imagen */
+    height: auto; /* Mantiene la proporción de aspecto original de la imagen */
+
+    margin-top: 20px; /* Ajusta este valor para mover la imagen hacia abajo */
+}
