--- a/prueba/estilos.css
+++ b/prueba/estilos.css
@@ -37,6 +37,7 @@
     border: 1px solid #ccc;
     padding: 20px; /* Puedes ajustar el valor según tus necesidades */
     text-align: center;
+    border: 4px solid black;
 }
 
 .contenedor img {
