--- a/prueba/estilos.css
+++ b/prueba/estilos.css
@@ -34,10 +34,10 @@
   
 
   .contenedor {
-    border: 1px solid #ccc;
+    border: 5px solid #000000;
     padding: 20px; /* Puedes ajustar el valor según tus necesidades */
     text-align: center;
-    border: 4px solid black;
+    
 }
 
 .contenedor img {
