--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -75,64 +75,9 @@
     width: 200px;
 }
 
-.titulosH2{
-   margin-top: -30px;
-   margin-left: 70px;
-}
-
-/*clases*/
-.titulosprincipales {
-    display: flex;
-    align-items: stretch;
-    background-color: rgb(0, 0, 0);
-    border: 4px solid rgb(255, 255, 255);
-    padding: 50px;
-    margin: 20px;
-    text-decoration: none;
-    height: 460px;
-    border-radius: 20px 20px 20px 20px;
-    max-width: 300px;
-    text-align: center;
-   
-}
-
-main h1,
-h2 {
-    color: bisque;
-    text-align: center;
-    top: 50px;
-}
-
-main {height: 2000vh; 
-    padding: 20px; 
-    box-sizing: border-box;
-}
-
-.img {
-    margin-top: 60px;
-    margin-right: 1000px;
-}
-
-.subcajas{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-}
-.cajas {
-    align-items: center;
-    display: flex;
-    height: 400px;
-    margin-top: 190px;
-  text-align: center;
-}
-
-.caja{
-    border: 4px solid white;
-    border-radius: 10pxs;
-}
-
 main {
     background-color: black;
+    bottom: 1000vh;
 }
 
 
