--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -1,6 +1,14 @@
 h2{color: bisque;}
 
 .caja{
-    border: 4px solid black;
-    border-radius: 50%;
+    border: 4px solid white;
+    border-radius: 10px;
+    max-width: 400px;
+    right: 500px;
+}
+
+.contenido{
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
