--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -3,8 +3,9 @@ h2{color: bisque;}
 .caja{
     border: 4px solid white;
     border-radius: 10px;
-    max-width: 400px;
+    max-width: 300px;
     margin: 20px;
+    max-height: 450px;
 }
 
 .contenido{
