--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -1,5 +1,6 @@
 h2{color: bisque;}
-main h1{color: bisque;}
+main h1{color: bisque;
+align-items: center;}
 
 .caja{
     border: 4px solid white;
@@ -7,6 +8,8 @@ main h1{color: bisque;}
     max-width: 380px;
     margin: 20px;
     max-height: 450px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .contenido{
