--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -8,12 +8,13 @@ align-items: center;}
     max-width: 380px;
     margin: 20px;
     max-height: 450px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .contenido{
-    justify-content: center;
+    /*justify-content: center;
     align-items: center;
-    display: flex;
+    display: flex;*/
 }
+
+#cajainicial{display: grid;
+grid-template-columns: repeat(9, 1fr);}
