--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -2,6 +2,8 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 55px;
     display: inline-block;
+    margin-left: 50px;
+    top: 20px;
 }
 
 #body {
