--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -17,4 +17,4 @@ align-items: center;}
 }
 
 #cajainicial{display: grid;
-grid-template-columns: repeat(9, 1fr);}
+grid-template-columns: 1fr 1fr 1fr;}
