--- a/Paginaprincipal.css
+++ b/Paginaprincipal.css
@@ -1,20 +1,178 @@
-h2{color: bisque;}
-main h1{color: bisque;
-align-items: center;}
 
-.caja{
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+
+
+h2 {
+    color: bisque;
+    font-family: 'Shrikhand', serif;
+}
+
+main h1 {
+    color: bisque;
+    margin: 20px 40px 0 450px ;
+    font-family: 'Shrikhand', serif;
+}
+
+.caja {
     border: 4px solid white;
     border-radius: 10px;
     max-width: 380px;
     margin: 20px;
     max-height: 450px;
-}
-
-.contenido{
-    /*justify-content: center;
+    justify-content: center;
     align-items: center;
-    display: flex;*/
 }
 
-#cajainicial{display: grid;
-grid-template-columns: 1fr 1fr 1fr;}
+.contenido {
+    margin: 30px;
+
+
+}
+
+#cajainicial {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+/*footer*/
+footer h1{
+    color: bisque;
+    font-family: 'Shrikhand', serif;
+}
+
+footer {
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background: #000000 !important;
+
+}
+footer ul{
+    font-family: 'Shrikhand', serif;
+    display: flex;
+}
+footer li{
+    list-style: none;
+    margin: 0 5px;
+}
+
+.fa-brands {
+    color: #262626;
+    font-size: 40px;
+    line-height: 80px;
+    transition: .5s;
+    padding-right: 14px;
+    top: 10px;
+}
+
+footer a {
+    width: 210px;
+    height: 80px;
+    background: #fff;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    padding-left: 20px;
+    transform: rotate(-30deg) skew(25deg) translate(0, 0);
+    box-shadow: -20px 20px 10px #00000080;
+}
+
+footer a span {
+    color: #262626;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 30px;
+    letter-spacing: 4px;
+    transition: .5s;
+}
+footer
+a:before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 20px;
+    background: #b1b1b1;
+    top: 10px;
+    left: -20px;
+    transform: rotate(0deg) skewY(-45deg);
+}
+
+footer
+a:after{
+    content: '';
+    position: absolute;
+    height: 20px;
+    width: 100%;
+    background: #b1b1b1;
+    bottom: -20px;
+    left: -10px;
+    transform: rotate(0deg) skewX(-45deg);
+}
+footer
+a:hover {
+    transform: rotate(-30deg) skew(25deg) translate(20px, -15px);
+    box-shadow: -50px 50px 50px #00000080;
+}
+
+footer
+li:hover .fa-brands,
+li:hover span {
+    color: #fff;
+}
+
+li:hover:nth-child(1) {
+    & a {
+        background: #3b5998;
+    
+        &::before {
+        background: #365492;
+        }
+        &::after {
+            background: #4a69ad;
+        }
+    }
+}
+
+li:hover:nth-child(2) {
+    & a {
+        background: #008f21;
+
+        &::before {
+            background: #219900;
+        }  
+        &::after {
+            background-color: #219900;
+        }
+    }
+}
+
+li:hover:nth-child(3) {
+    & a {
+        background: #be1704;
+        
+        &::before {
+            background: #db0e0e;
+        }
+
+        &::after {
+            background: #db0e0e;
+        }
+    }
+}
+
+li:hover:nth-child(4) {
+    & a {
+        background: #e4405f;
+
+        &::before {
+            background: #d81c3f;
+        }
+
+        &::after{
+            background: #e46880;
+        }
+    }
+}
