--- a/Paginas del color de prendas/Styles.css
+++ b/Paginas del color de prendas/Styles.css
@@ -82,8 +82,8 @@ main{
     bottom: 1000px;
 }
 
-footer{ background-color: aqua;
-border: 5px solid gold;}
+footer{ background-color: rgb(0, 0, 0);
+border: 4px solid white;}
 
 /*Desplegable Camisas*/
 .opciones {
